--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -125,9 +125,7 @@
 <ul><li><span id="Sketcher_CompCreateArc"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it oblouk:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>: Vytvo&#345;&iacute; oblouk podle jeho st&#345;edu a koncov&yacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointArc.svg&amp;filetimestamp=20240101085650&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Oblouk ze 3 bod&#367;</a>: Vytvo&#345;&iacute; oblouk z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfEllipse.svg&amp;filetimestamp=20240101170312&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfEllipse.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Elliptical Arc</a>: Creates an elliptical arc.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfEllipse.svg&amp;filetimestamp=20240101170312&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfEllipse.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Eliptick&yacute; oblouk</a>: Vytvo&#345;&iacute; eliptick&yacute; oblouk.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfHyperbola.svg&amp;filetimestamp=20240101170323&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfHyperbola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolic Arc</a>: Creates an hyperbolic arc.</li></ul></dd></dl>
 </div>
@@ -762,13 +760,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113245
+Cached time: 20260118113323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.442 seconds
-Real time usage: 0.625 seconds
-Preprocessor visited node count: 1532/1000000
+CPU time usage: 0.449 seconds
+Real time usage: 0.670 seconds
+Preprocessor visited node count: 1531/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -778,19 +776,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.120      1 -total
- 25.93%   10.403      1 Template:Sketcher_Tools_navi/cs
- 20.54%    8.242      2 Template:Navigation_menu_2
- 19.35%    7.764      1 Template:Userdocnavi/cs
-  7.95%    3.188      1 Template:PropertyView
-  6.80%    2.727     34 Template:Version
-  5.59%    2.241      8 Template:VersionPlus
-  5.49%    2.201      2 Template:Docnav
-  4.64%    1.862      1 Template:Variable
-  4.58%    1.838      6 Template:Caption
+100.00%   36.933      1 -total
+ 22.58%    8.338      1 Template:Sketcher_Tools_navi/cs
+ 14.80%    5.468      1 Template:Userdocnavi/cs
+ 13.12%    4.845      2 Template:Navigation_menu_2
+ 12.32%    4.550      1 Template:PropertyView
+  6.66%    2.461     34 Template:Version
+  6.17%    2.277      2 Template:Docnav
+  6.13%    2.263      6 Template:Caption
+  5.32%    1.965      1 Template:Variable
+  5.24%    1.934      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113245 and revision id 1740287. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113322 and revision id 1740290. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
