--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Cercle cosm&eacute;tique par 2 points
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Cercle cosm&eacute;tique par 2 points
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144657
+Cached time: 20260118113505
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.193 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25846/2097152 bytes
-Template argument size: 10232/2097152 bytes
+Post&#8208;expand include size: 25860/2097152 bytes
+Template argument size: 10246/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1147/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.200      1 -total
- 51.81%   19.790      2 Template:Navigation_menu_2
- 51.18%   19.549      1 Template:Userdocnavi/fr
- 21.25%    8.116      1 Template:TechDraw_Tools_navi/fr
-  9.33%    3.564      2 Template:Docnav/fr
-  7.61%    2.906      1 Template:GuiCommand/fr
-  3.27%    1.251      1 Template:MenuCommand
-  2.96%    1.131      1 Template:Caption
-  2.94%    1.123      1 Template:Button
+100.00%   28.336      1 -total
+ 34.04%    9.645      1 Template:TechDraw_Tools_navi/fr
+ 22.48%    6.370      2 Template:Navigation_menu_2
+ 17.29%    4.899      1 Template:Userdocnavi/fr
+ 12.03%    3.408      1 Template:GuiCommand/fr
+ 11.65%    3.302      2 Template:Docnav/fr
+  9.31%    2.639      1 Template:MenuCommand
+  8.25%    2.338      1 Template:Button
+  5.01%    1.420      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144656 and revision id 1739573. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260118113505 and revision id 1740296. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
