--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -62,7 +62,7 @@
 <li>S&eacute;lectionnez le deuxi&egrave;me sommet pour d&eacute;terminer le rayon du cercle.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cercle cosm&eacute;tique par 2 points</a></span>.</li>
-<li>S&eacute;lectionnez la commande <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 2 points</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez la commande <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 2 points</b> du menu.</li></ul></li>
 <li>Un cercle cosm&eacute;tique est ajout&eacute;.</li></ol>
 <p><br>
 </p>
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113505
+Cached time: 20260118113519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.136 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25860/2097152 bytes
-Template argument size: 10246/2097152 bytes
+Post&#8208;expand include size: 25867/2097152 bytes
+Template argument size: 10253/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1147/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.336      1 -total
- 34.04%    9.645      1 Template:TechDraw_Tools_navi/fr
- 22.48%    6.370      2 Template:Navigation_menu_2
- 17.29%    4.899      1 Template:Userdocnavi/fr
- 12.03%    3.408      1 Template:GuiCommand/fr
- 11.65%    3.302      2 Template:Docnav/fr
-  9.31%    2.639      1 Template:MenuCommand
-  8.25%    2.338      1 Template:Button
-  5.01%    1.420      1 Template:Caption
+100.00%   30.270      1 -total
+ 31.06%    9.401      1 Template:TechDraw_Tools_navi/fr
+ 22.50%    6.810      2 Template:Navigation_menu_2
+ 18.48%    5.595      1 Template:Userdocnavi/fr
+ 16.02%    4.849      1 Template:GuiCommand/fr
+ 13.36%    4.045      2 Template:Docnav/fr
+  8.45%    2.557      1 Template:Caption
+  5.28%    1.598      1 Template:Button
+  5.14%    1.556      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260118113505 and revision id 1740296. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260118113519 and revision id 1740298. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
