--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Cercle cosm&eacute;tique par 3 points
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Cercle cosm&eacute;tique par 3 points
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -110,15 +110,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117145047
+Cached time: 20260118113538
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25793/2097152 bytes
-Template argument size: 10199/2097152 bytes
+Post&#8208;expand include size: 25807/2097152 bytes
+Template argument size: 10213/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 1220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.912      1 -total
- 23.62%    8.246      1 Template:TechDraw_Tools_navi/fr
- 18.14%    6.334      2 Template:Docnav/fr
- 16.31%    5.693      1 Template:GuiCommand/fr
- 13.74%    4.797      2 Template:Navigation_menu_2
- 13.32%    4.651      1 Template:Caption
-  9.44%    3.294      1 Template:MenuCommand
-  9.38%    3.274      1 Template:Button
-  7.16%    2.499      1 Template:Userdocnavi/fr
+100.00%   24.703      1 -total
+ 27.73%    6.851      1 Template:TechDraw_Tools_navi/fr
+ 18.43%    4.552      2 Template:Navigation_menu_2
+ 15.18%    3.749      1 Template:Userdocnavi/fr
+ 14.80%    3.655      1 Template:GuiCommand/fr
+ 11.96%    2.955      2 Template:Docnav/fr
+ 10.83%    2.674      1 Template:Caption
+  8.67%    2.141      1 Template:Button
+  7.97%    1.970      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117145047 and revision id 1739587. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260118113538 and revision id 1740301. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
