--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -57,11 +57,11 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>Vous povez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez trois sommets sur la circonf&eacute;rence pour d&eacute;terminer le cercle.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cercle cosm&eacute;tique par 3 points</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 3 points</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 3 points</b> du menu.</li></ul></li>
 <li>Un cercle cosm&eacute;tique est ajout&eacute;.</li></ol>
 <p><br>
 </p>
@@ -110,15 +110,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113538
+Cached time: 20260118113557
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.110 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25807/2097152 bytes
-Template argument size: 10213/2097152 bytes
+Post&#8208;expand include size: 25814/2097152 bytes
+Template argument size: 10220/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 1220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.703      1 -total
- 27.73%    6.851      1 Template:TechDraw_Tools_navi/fr
- 18.43%    4.552      2 Template:Navigation_menu_2
- 15.18%    3.749      1 Template:Userdocnavi/fr
- 14.80%    3.655      1 Template:GuiCommand/fr
- 11.96%    2.955      2 Template:Docnav/fr
- 10.83%    2.674      1 Template:Caption
-  8.67%    2.141      1 Template:Button
-  7.97%    1.970      1 Template:MenuCommand
+100.00%   29.334      1 -total
+ 31.45%    9.226      1 Template:TechDraw_Tools_navi/fr
+ 17.93%    5.260      2 Template:Navigation_menu_2
+ 16.92%    4.963      1 Template:Caption
+ 13.48%    3.953      1 Template:Userdocnavi/fr
+ 12.14%    3.560      1 Template:Button
+  8.20%    2.406      2 Template:Docnav/fr
+  7.86%    2.305      1 Template:GuiCommand/fr
+  7.18%    2.105      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260118113538 and revision id 1740301. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260118113557 and revision id 1740304. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
