--- a/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
@@ -63,7 +63,7 @@
 <li>S&eacute;lectionnez le troisi&egrave;me sommet pour d&eacute;terminer l'angle final de l'arc.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Arc cosm&eacute;tique</a></span>.</li>
-<li>S&eacute;lectionnez le <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Arc cosm&eacute;tique</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez le <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Arc cosm&eacute;tique</b> du menu.</li></ul></li>
 <li>Un arc cosm&eacute;tique est ajout&eacute;.</li></ol>
 <p><br>
 </p>
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113617
+Cached time: 20260118113629
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.155 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25847/2097152 bytes
-Template argument size: 10218/2097152 bytes
+Post&#8208;expand include size: 25854/2097152 bytes
+Template argument size: 10225/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,18 +128,18 @@ Unstrip post&#8208;expand size: 1130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.083      1 -total
- 38.70%   13.579      1 Template:TechDraw_Tools_navi/fr
- 22.69%    7.960      2 Template:Navigation_menu_2
- 13.60%    4.772      1 Template:Userdocnavi/fr
- 10.86%    3.810      1 Template:Caption
- 10.52%    3.689      1 Template:GuiCommand/fr
-  8.68%    3.046      2 Template:Docnav/fr
-  8.65%    3.035      1 Template:MenuCommand
-  7.01%    2.460      1 Template:Button
+100.00%   37.296      1 -total
+ 33.76%   12.590      1 Template:TechDraw_Tools_navi/fr
+ 19.11%    7.129      2 Template:Navigation_menu_2
+ 15.98%    5.961      1 Template:Userdocnavi/fr
+ 10.81%    4.031      2 Template:Docnav/fr
+ 10.43%    3.891      1 Template:Caption
+  9.89%    3.690      1 Template:GuiCommand/fr
+  9.16%    3.417      1 Template:Button
+  7.81%    2.912      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260118113617 and revision id 1740306. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260118113628 and revision id 1740308. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
